# x-university-2

./: .gitignore  LICENSE  Makefile  QUICK_START.md  README.md  setup.sh
backend/: Dockerfile  README.md  alembic.ini  constants.py  dev.config.json  init_db.py  pyproject.toml  requirements.txt  test_auth.py  test_email.py
backend/alembic/: env.py
backend/alembic/versions/: 1692902edebf_update_users_table_to_uuid_and_add_.py  6e7ad66a2f10_initial_auth_tables.py  add_2fa_support.py  add_user_security_fields.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  main.py
backend/app/api/routes/: __init__.py  auth.py  monitor.py  users.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  base.py
backend/app/models/: __init__.py  auth.py
backend/app/schemas/: __init__.py  auth.py
backend/app/services/: __init__.py  auth_service.py  db_performance.py  email_service.py  two_factor_service.py
backend/app/workers/: __init__.py
backend/templates/email/: verify_email.html
backend/tests/: conftest.py  test_auth.py  test_email_2fa.py  test_health.py  test_monitor.py
docs/: AUTH_FLOWS.md  BACKEND.md  DATABASE.md  FEATURES.md  FRONTEND.md  POSTGRES_FIX.md  SCRIPT_ORGANIZATION.md  SETUP.md
documents-references/: AUTH_IMPLEMENTATION.md  README.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
infra/: .env.example  README.md  dev.config.json  docker-compose.startup-fix.yml  docker-compose.yml
(+39 files in other folders)
